# Tin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: build-check.yml  release.yml  test.yml
prisma/: dev.db  fts5_setup.sql  schema.prisma
prisma/migrations/20251213213742_init/: migration.sql
prisma/migrations/20251222135634_add_locked_amount/: migration.sql
scripts/: sync-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: init.sql
src-tauri/scripts/: setup-android-signing.ps1
src-tauri/src/: archiver.rs  commands.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  tests.rs
src-tauri/tests/: amount_tests.rs  archive_tests.rs  common.rs  error_tests.rs  schema_tests.rs  search_tests.rs
src/__tests__/: api.test.ts  setup.ts  types.test.ts  validators.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CardGrid.tsx  CardItem.tsx  CardView.tsx  ConfirmModal.tsx  CurrencySelector.tsx  Icon.tsx  RecentChanges.tsx  SearchFilters.tsx  Sidebar.tsx  TodoItem.tsx  TopBar.tsx
src/hooks/: useCurrency.tsx
src/lib/: api.ts  seed.ts  types.ts  validators.ts
src/styles/: theme.tsx  tokens.ts
src/utils/: amount.ts  index.ts  platform.ts
