[package]
name = "Tin"
version = "0.1.8"
description = "Tin - Local-first expense tracker"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2.7.1"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["time", "sync"] }
thiserror = "2.0"
once_cell = "1.20"
tauri-plugin-opener = "2.5.2"

[features]
# Enable devtools in dev builds only
default = []
devtools = []
